# Stickr

./: README.md  app.py  application.py  build  dep_list.sh  pyproject.toml  requirements.txt  run_for_deps
.github/workflows/: test.yml
ImageDataset/: README  prompt_generations.txt
src/: app.py  forms.py  pyproject.toml  sticker_generation.py  test_app.py
src/stickr/: application.py  sticker_generation.py
src/stickr/templates/: home.html
src/tests/: test_app.py
static/: home.css  search.css  search.js
stickr/stickr/: app.py  forms.py
templates/: home.html  search.html
tests/: test_app.py  test_sticker_generation.py
