[tool.poetry]
name = "stickr"
version = "0.1.0"
description = ""
authors = ["Ayush Sachdeva <as216@rice.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
Flask = "^2.2.2"
Flask-WTF = "^1.0.1"
pytest = "^7.1.3"
requests = "^2.28.1"
WTForms = "^3.0.1"
replicate = "^0.4.0"
openai = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
